# sphinxcontrib-katex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  update-katex-version.sh
.github/workflows/: build.yml  documentation.yml  katex.yml  linkcheck.yml  linter.yml  os.yml  package.yml  publish.yml  python.yml  sphinx-legacy.yml  sphinx.yml  test.yml
doc/: conf.py  configuration.rst  examples.rst  index.rst  installation.rst  macros.rst  requirements.txt  usage.rst
docs/: conf.py  configuration.rst  examples.rst  index.rst  installation.rst  macros.rst  requirements.txt  usage.rst
docs/_static/: custom.css
docs/_templates/: layout.html
sphinxcontrib/: __init__.py  auto-render.min.js  katex-math.css  katex-server.js  katex.py  katex_autorenderer.js  render-katex.js
sphinxcontrib/katex/: __init__.py
tests/: test_katex_server.py
