[metadata]
name = sphinxcontrib-katex
version = attr: sphinxcontrib.katex.__version__
author = Hagen Wierstorf
author_email = hagenw@posteo.de
home_page = https://github.com/hagenw/sphinxcontrib-katex
description = A Sphinx extension for rendering math in HTML pages
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = sphinx, latex, katex, math, documentation
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    sphinx >=1.6
python_requires = >=3.7

[flake8]
exclude =
    .eggs,
    build,
    node_modules,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
